<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.bws.jdistil</groupId>
  <artifactId>jdistil</artifactId>
  <version>3.0.0</version>
  <packaging>pom</packaging>
  
  <name>jdistil</name>
  
  <properties>
		<maven-compiler-version>3.8.1</maven-compiler-version>
		<maven-war-version>3.4.0</maven-war-version>
		<maven-javadoc-version>3.6.3</maven-javadoc-version>
	</properties>
	
  <modules>
    <module>Core</module>
    <module>Codes</module>
    <module>CodesApp</module>
    <module>Security</module>
    <module>SecurityApp</module>
  </modules>

  <dependencyManagement>
		<dependencies>
			<dependency>
			  <groupId>javax</groupId>
			  <artifactId>javaee-api</artifactId>
			  <version>8.0.1</version>
			</dependency>
			<dependency>
			  <groupId>javax.mail</groupId>
			  <artifactId>mail</artifactId>
			  <version>1.4.7</version>
			</dependency>
			<dependency>
			  <groupId>javax.xml.bind</groupId>
			  <artifactId>jaxb-api</artifactId>
			  <version>2.3.1</version>
			</dependency>
		</dependencies>
  </dependencyManagement>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <pluginManagement>
		  <plugins>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>${maven-compiler-version}</version>
	        <configuration>
	          <release>21</release>
	        </configuration>
	      </plugin>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-war-plugin</artifactId>
	        <version>${maven-war-version}</version>
	        <configuration>
						<attachClasses>true</attachClasses>
					</configuration>
				</plugin>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-javadoc-plugin</artifactId>
		      <version>${maven-javadoc-version}</version>
	        <configuration>
	          <show>private</show>
	          <failOnError>false</failOnError>
	          <doclint>all,-missing</doclint>
	        </configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
		  	</plugin>
				<plugin>
		      <groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
		  	<plugin>
	        <groupId>org.apache.maven.plugins</groupId>
		  	  <artifactId>maven-resources-plugin</artifactId>
			    <version>3.3.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
  </build>
  
</project>